# ai-first-product-teardown

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  correction-dispute.yml  methodology-proposal.yml  product-proposal.yml
.github/workflows/: ci.yml
docs/governance/: archival-and-deprecation.md  bias-and-conflicts.md  claim-verification.md  corrections-and-disputes.md  methodology-limitations.md  privacy-and-sensitive-info.md  reproducibility.md  research-ethics.md  triangulation.md  versioning.md
docs/methodology/: citation-standard.md  confidence-levels.md  evidence-hierarchy.md  fact-inference-hypothesis.md  inclusion-criteria.md  recency-policy.md  research-workflow.md  selection-criteria.md  source-types.md  unit-of-analysis.md
docs/phase-reports/: phase-2-completion-report.md
docs/research/: interaction-test-protocol.md  phase-2-evidence-audit-report.md  phase-2-execution.md  phase-2-methodology-changes.md  (+3 more)
frameworks/: cross-product-comparison.md  dimension-relationships.md  qualitative-scoring.md  scoring-false-precision.md
schemas/: evidence-record.schema.json  product-metadata.schema.json  scoring-record.schema.json
templates/: evidence-record-template.yaml  research-log-template.md  source-inventory-template.md  teardown-template.md
tests/: conftest.py  test_audit.py  test_evidence_audit.py  test_evidence_validation.py  test_metadata_validation.py  test_scoring_validation.py
(+84 files in other folders)
