[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "product-intelligence"
version = "0.1.0"
description = "Validation tooling for the AI-First Product Teardown research library."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AI-First Product Teardown contributors" }]
dependencies = [
    "jsonschema>=4.20",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.20",
]

[project.scripts]
pi-validate = "product_intelligence.audit:main"
pi-evidence-audit = "product_intelligence.evidence_audit:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
warn_unused_configs = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
